--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Catamaran|Gugi');
+
+
 :root {
     --padd: 20px;
     --marg: 20px;
     --shadow: 2px 2px 15px #000;
     --btn-bord: 5px solid;
     --txt-shadow: 1px 1px 1px #000;
-    --trans: .1s ease-in-out;
+    --trans: all 300ms ease-in-out;
+
+    --display: 'Gugi', cursive;
+    --status: 'Catamaran', sans-serif;
 }
 
 * {
@@ -14,7 +20,9 @@
 html, body {
     height: 100vh;
     overflow: hidden;
-    background-color: #94f1a8;
+    background-size: cover;
+    background-color: #272727;
+    font-family: var(--status);
 }
 
 .disappear {
@@ -52,15 +60,40 @@ header {
 
 .header-div h1 {
     font-size: 50px;
+    font-family: var(--display);
+    color: #fff;
 }
 
-/* Characters */
-.player {
+
+
+
+/* to center 4 pic only */
+#chara-select {
+    width: 1100px;
+}
+
+.chara-slot {
+    width: 220px;
+    height: 120px;
+    float: left;
+    margin: 6px 2%; /*  2% left right to center 4*/
+    color: #fff;
+    z-index: 99;
+}
+
+.chara-slot img {
+    height: 75%;
     width: 70px;
 }
 
+.chara-slot p {
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+}
 
-
+.chara-slot:hover p {
+    opacity: 1;
+}
 
 
 
@@ -69,7 +102,7 @@ header {
 /* //////////////////////////////////////////////////// */
 .container {
     width: 100%;
-    min-height: 60%;
+    min-height: 50%;
     margin: 0 auto;
     position: relative;
 }
@@ -78,8 +111,8 @@ section {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #e0d994;
-    border: 10px inset #aca675;
+    /* background-color: #e0d994;
+    border: 10px inset #aca675; */
     border-radius: 1px;
 }
 
@@ -107,13 +140,20 @@ section {
     left: 50%;
     margin-left: -75px;
     margin-top: -75px;
+    color: #fff;
+    font-size: 30px;
 }
 
 
-.in-play {
+.chara img {
     width: 100%;
+    height: 180px;
 }
 
+.health,
+.attack {
+    font-size: 18px;
+}
 
 
 
@@ -124,88 +164,129 @@ section {
 /* //////////////////////////////////////////////////// */
 footer {
     position: relative;
-    height: 20%;
+    height: 30%;
     bottom: 0;
     padding: var(--padd);
     clear: both;
 }
 
+.bottom {
+    width: 380px;
+    height: 95%;
+    border-radius: 5px;
+    color: #fff;
+    padding: 10px;
+    font-size: 25px;
+    line-height: 40px;
+}
+
+.info-center {
+    /* background-color: #fff; */
+    position: absolute;
+    top: 0;
+    right: 25px;
+    box-shadow: 0 0 15px 0 #fff,
+                inset 0 0 15px 0 #fff;
+}
+
+.info-center p {
+    padding: 10px;
+}
+
+
+.setting {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    padding-left: 35px;
+}
+
+#reset {
+    position: absolute;
+    bottom: 30px;
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: #383838;
+    border: 4px outset #686767;
+    color: #fff;
+    font-size: 20px;
+    transition: var(--trans);
+}
+
+#reset:hover {
+    background-color: #fff;
+    color:  #383838;
+    border: 4px outset #cecece;
+}
+
+#reset:active {
+    border: none;
+}
+
 .wrapper {
-    width: 500px;
+    width: 300px;
     margin: 20px auto;
-  }
+}
 
 .container-footer {
     padding-bottom: 40px;
     padding-left: 9%;
     padding-right: 7%;
-    border-top: 1px solid #ccc;
 }
 
 a.button {
     display: block;
     position: relative;
-    float: left;
-    width: 120px;
-    padding: 0;
-    margin: 10px 20px 10px 0;
+    width: 200px;
+    margin: 20px auto;
     font-weight: 600;
+    font-size: 30px;
     text-align: center;
-    line-height: 50px;
+    line-height: 80px;
     color: #FFF;
-    border-radius: 5px;
-    transition: all var(--trans);
+    border-radius: 7px;
+    transition: var(--trans);
     text-decoration: none;
+
 }
 
-
-
-.btnBlueGreen {
-    background: #00AE68;
+a.button:hover {
+    text-shadow: 1px 1px 3px #000;
 }
 
-.btnLightBlue {
-    background: #5d65cd;
+.start {
+    background: #6aca6a;
+    box-shadow: 0px 10px 0px 0px #468646;
+    border: 4px outset #7eee7e;
 }
 
-.btnPurple {
-    background: #a74949;
+a.start:active {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 0px 0px #468646;
 }
 
-
-
-.btnBlueGreen.btnPush {
-    box-shadow: 0px 5px 0px 0px #007144;
+.atk {
+    background: #ca6a6a;
+    box-shadow: 0px 10px 0px 0px #5a2e2e;
+    border: 4px outset #fa8585;
 }
 
-.btnLightBlue.btnPush {
-    box-shadow: 0px 5px 0px 0px rgb(30, 46, 133);
+a.reset:active {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 0px 0px #5a2e2e;
 }
 
-.btnPurple.btnPush {
-    box-shadow: 0px 5px 0px 0px #6d1818;
+.reset {
+    background: #a8a8a8;
+    box-shadow: 0px 10px 0px 0px #5f5f5f;
+    border: 4px outset #d1d1d1;
 }
 
-
-.btnPush:hover {
-    text-shadow: 1px 1px 1px #000;
-}
-
-.btnPush:active {
-    margin-top: 15px;
-    margin-bottom: 5px;
-}
-
-
-
-.btnBlueGreen.btnPush:active {
-    box-shadow: 0px 0px 0px 0px #007144;
-}
-
-.btnLightBlue.btnPush:active {
-    box-shadow: 0px 0px 0px 0px #1E8185;
-}
-
-.btnPurple.btnPush:active {
-    box-shadow: 0px 0px 0px 0px #6d1818;
+a.reset:active {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 0px 0px #5f5f5f;
 }
