--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ html, body {
     background-size: cover;
     background-color: #272727;
     font-family: var(--status);
+    background-image: url(../images/bg8.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .disappear {
@@ -47,7 +50,7 @@ html, body {
 
 /* Messages */
 header {
-    height:20%;
+    height: 30%;
     text-align: center;
 }
 
@@ -74,16 +77,19 @@ header {
 
 .chara-slot {
     width: 220px;
-    height: 120px;
+    height: 200px;
     float: left;
     margin: 6px 2%; /*  2% left right to center 4*/
     color: #fff;
-    z-index: 99;
+    border-radius: 180px;
+    box-shadow: 0 0 30px 0 #ffffff9d,
+                inset 0 0 30px 0 #ffffff9d;
+    /* z-index: 99; */
 }
 
 .chara-slot img {
-    height: 75%;
-    width: 70px;
+    height: 100%;
+    width: 60%;
 }
 
 .chara-slot p {
@@ -134,9 +140,9 @@ section {
 /* Character CSS */
 .chara {
     position: absolute;
-    width: 150px;
-    height: 150px;
-    top: 50%;
+    width: 240px;
+    height: 340px;
+    top: 20%;
     left: 50%;
     margin-left: -75px;
     margin-top: -75px;
@@ -147,7 +153,11 @@ section {
 
 .chara img {
     width: 100%;
-    height: 180px;
+    height: 300px;
+}
+
+.chara .name {
+    margin-top: -30px;
 }
 
 .health,
@@ -164,7 +174,7 @@ section {
 /* //////////////////////////////////////////////////// */
 footer {
     position: relative;
-    height: 30%;
+    height: 20%;
     bottom: 0;
     padding: var(--padd);
     clear: both;
