--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,20 +242,23 @@ html, body {
 /* ENENY */
 .right-battle {
     width: 250px;
-    height: 250px;
+    height: 200px;
     position: absolute;
     top: 0px;
-    right: 10px;
+    right: 0px;
+    margin-top: -20px;
+    margin-right: -10px;
 }
 
 .right-status {
-    top: 120px;
-    right: 230px;
+    top: 50px;
+    right: 240px;
     text-align: right;
     border-left: 5px solid var(--inner-color);
     border-bottom: 5px solid var(--inner-color);
     border-radius: 30px
 }
+
 
 
 
@@ -267,15 +270,16 @@ html, body {
     height: 250px;
     position: absolute;
     bottom: 28%;
-    left: 10px;
+    left: 0px;
+    margin-left: -20px;
 }
 
 .left-status {
-    bottom: 35%;
-    left: 290px;
+    bottom: 29%;
+    left: 240px;
     border-right: 5px solid var(--inner-color);
     border-bottom: 5px solid var(--inner-color);
-    border-radius: 30px
+    border-radius: 30px;
 }
 
 .left-battle img {
@@ -326,8 +330,8 @@ html, body {
 
 .info-center p {
     text-align: left;
-    font-size: 25px;
-    line-height: 40px;
+    font-size: 20px;
+    line-height: 50px;
     color: var(--inner-color);
 }
 
@@ -490,34 +494,35 @@ a.button:active {
     }
 
     .right-battle {
-        width: 120px;
+        width: 250px;
         height: 120px;
-        top: 90px;
-        right: 30px;
     }
 
     .right-status {
-        width: 150px;
-        height: 40px;
-        top: 170px;
-        right: 160px;
+        width: 270px;
+        height: 80px;
+        right: 200px;
     }
 
 
     .left-battle {
-        width: 150px;
+        width: 250px;
         height: 120px;
-        position: absolute;
-        bottom: 28%;
-        left: 70px;
+        /* position: absolute; */
+        bottom: 45%;
+        /* left: 70px; */
     }
     
     .left-status {
-        width: 200px;
-        height: 50px;
-        position: absolute;
+        width: 270px;
+        height: 80px;
         bottom: 30%;
-        left: 250px;
+        left: 180px;
+    }
+
+    .status-name {
+        font-size: 22px;
+        line-height: 24px;
     }
 
     .gamegirl {
@@ -530,16 +535,16 @@ a.button:active {
     .inner-right {
         float: none;
         display: block;
-        width: 70%;
-        
         margin: 0 auto;
     }
 
     .inner-left {
+        width: 90%;
         height: 70%;
     }
 
     .inner-right {
+        width: 70%;
         height: 30%;
     }
 
@@ -636,29 +641,46 @@ a.button:active {
         letter-spacing: 2px;
     }
 
+    .top {
+        width: 100%;
+    }
+
+    .chara-slot {
+        width: 24%;
+        margin: 0;
+    }
+
+    .chara-slot p {
+        margin-left: 10px;
+        font-size: 12px;
+        opacity: 1;
+    }
+
     .right-battle {
         top: 10px;
     }
 
     .right-status {
-        width: 200px;
-        height: 50px;
+        width: 220px;
+        height: 55px;
         top: 50px;
-        right: 160px;
+        right: 250px;
     }
 
-
     .left-battle {
+        bottom: 50%;
         left: 30px;
     }
     
     .left-status {
-        left: 200px;
+        width: 220px;
+        height: 55px;
+        left: 250px;
     }
 
     .status-name {
         font-size: 15px;
-        line-height: 16px;
+        line-height: 20px;
         margin-top: -10px;
     }
 
@@ -673,7 +695,7 @@ a.button:active {
 
     .info-center p {
         font-size: 17px;
-        line-height: 20px;
+        line-height: 30px;
     }
 
     .win-page,
@@ -694,9 +716,27 @@ a.button:active {
 }
 
 @media screen and (max-width: 830px)  { 
-    .inner-left {
-        width: 90%;
-        margin: 0 auto;
+    .left-status {
+        width: 165px;
+        height: 50px;
+    }
+
+    .right-status {
+        width: 165px;
+        height: 50px;
+    }
+
+    .status-name {
+        margin-top: -15px;
+    }
+
+    .info-center {
+        padding: 20px 25px;
+    }
+
+    .info-center p {
+        font-size: 12px;
+        line-height: 20px;
     }
 
     #pikaimg {
@@ -708,6 +748,81 @@ a.button:active {
 
 @media screen and (max-width: 530px) {
     .container {
-        min-width: 530px;
+        min-width: 420px;
+    }
+
+    #messages h1 {
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: 1px;
+    }
+
+    .score, .click-start {
+        width: 200px;
+        margin: 8px auto;
+        font-size: 16px;
+    }
+
+    .inner-left {
+        width: 98%;
+        height: 60%;
+    }
+
+    .left-battle {
+        width: 130px;
+        bottom: 28%;
+    }
+
+    .left-status {
+        width: 150px;
+        height: 50px;
+        bottom: 30%;
+        left: 120px;
+    }
+
+    .right-battle {
+        width: 130px;
+        top: 0;
+    }
+
+    .right-status {
+        width: 150px;
+        height: 50px;
+        top: 20px;
+        right: 120px;
+    }
+
+    .info-center {
+        padding: 20px 25px;
+    }
+
+    .info-center p {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+    .wrapper {
+        position: static;
+        margin: 20px auto;
+        /* top: 50%; */
+    }
+
+    .bottom-btm {
+        /* width: 200px; */
+        top: initial;
+        left: initial;
+        bottom: 0px;
+        left: 40%;
+    }
+
+    #sound {
+        bottom: 0px;
+        right: -3%;
+    }
+
+    #pikaimg {
+        width: 60%;
+        margin-left: 50%;
+        margin-top: -100px;
     }
 }
