--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -884,8 +884,8 @@ a.button:active {
     }
 
     a.button:active {
-        margin-top: 5px;
-        margin-bottom: 5px;
+        /* margin-top: 10px;
+        margin-bottom: 0px; */
         box-shadow: 0px 0px 0px 0px #3b3b3b;
     }
 
@@ -958,7 +958,7 @@ a.button:active {
         width: 288px;
         height: 155px;
         margin: 0 auto;
-        height: auto;
+        height: 150px;
     }
 
     .wrapper {
